--- a/admin-pannel/src/HR/view/Css/Hrdetail.css
+++ b/admin-pannel/src/HR/view/Css/Hrdetail.css
@@ -1,4 +1,3 @@
-
 .employee-Main-box {
   display: flex;
   justify-content: center;
@@ -8,6 +7,28 @@
   flex-wrap: wrap; 
 }
 
+.badge {
+  padding: 0.5em 1em;
+  border-radius: 0.25em;
+  color: white; /* Ensure text is readable */
+  font-weight: bold;
+}
+
+.badge-success {
+  background-color: #28a745; /* Green for Present */
+}
+
+.badge-danger {
+  background-color: #dc3545; /* Red for Absent */
+}
+
+.badge-warning {
+  background-color: #ffc107; /* Yellow for Halfday */
+}
+
+.badge-secondary {
+  background-color: #6c757d; /* Gray for Pending */
+}
 
 .employeeImage {
   text-align: center;
@@ -26,14 +47,14 @@
   font-size: 1rem; 
 }
 
-
 .camera-icon {
   position: absolute;
   bottom: 80px; 
   right: 20px; 
   font-size: 1.5rem; 
   cursor: pointer;
-  color: #007bff; }
+  color: #007bff; 
+}
 
 .employeedetail {
   width: 100%;
@@ -50,6 +71,21 @@
   margin-top: 20px; 
 }
 
+.detail-row {
+  display: flex;
+  justify-content: space-between; /* Align items with equal space */
+  margin: 10px 0; /* Space between rows */
+}
+
+.detail-title {
+  font-weight: bold; /* Make titles stand out */
+  width: 150px; /* Set fixed width for titles */
+}
+
+.detail-value {
+  flex-grow: 1; /* Allow values to take the remaining space */
+  text-align: right; /* Right align the values */
+}
 
 .employeedetail p {
   margin: 10px 0;
@@ -69,7 +105,6 @@
 .employeedetail button:hover {
   background-color: #0056b3;
 }
-
 
 @media (max-width: 768px) {
   .employee-Main-box {
