--- a/admin-pannel/src/Mytemppage/Css/unauthorized.css
+++ b/admin-pannel/src/Mytemppage/Css/unauthorized.css
@@ -1,6 +1,6 @@
 /* UnauthorizedPage.css */
 
-.container {
+.container-unathorized.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,17 +10,17 @@
     text-align: center; /* Center text horizontally */
   }
   
-  h1 {
+  .container-unathorized h1 {
     font-size: 2rem;
     margin-bottom: 1rem;
   }
   
-  p {
+  .container-unathorized p {
     font-size: 1rem;
     margin-bottom: 1rem;
   }
   
-  button {
+  .container-unathorized button {
     padding: 0.5rem 1rem;
     font-size: 1rem;
     cursor: pointer;
@@ -31,20 +31,20 @@
     transition: background-color 0.3s ease;
   }
   
-  button:hover {
+ .container-unathorized  button:hover {
     background-color: #0056b3;
   }
   
   @media (max-width: 600px) {
-    h1 {
+   .container-unathorized  h1 {
       font-size: 1.5rem;
     }
   
-    p {
+  .container-unathorized   p {
       font-size: 0.875rem;
     }
   
-    button {
+   .container-unathorized  button {
       font-size: 0.875rem;
       padding: 0.5rem;
     }
