--- a/admin-pannel/src/Users/CSS/Detailemployee.css
+++ b/admin-pannel/src/Users/CSS/Detailemployee.css
@@ -47,7 +47,7 @@
   font-size: 1rem; 
 }
 
-.camera-icon {
+.employee-Main-box .camera-icon {
   position: absolute;
   bottom: 80px; 
   right: 20px; 
